--- a/templates/login.html
+++ b/templates/login.html
@@ -85,14 +85,14 @@
 <body>
 
 <hr>
-<div>
+<div style="width: 100%">
     <label for="userId"></label><input type="text" id="userId" name="userId" placeholder="userId" required><br>
     <label for="password"></label><input type="password" id="password" name="password" placeholder="password" required><br>
     <span id="loginResult"></span><br>
     <button id="loginButton">Login</button>
 </div>
 <hr>
-<div>
+<div style="width: 100%">
     <button id="protectedButton">Protected</button>
     <span id="protectedResult"></span>
 </div>
